# Bom-Clima

./: .gitignore  LICENSE  README.md  bom-clima.py  pyproject.toml
ai_context/: agents.md
bom_clima/: __init__.py  __main__.py  api.py  cache.py  cli.py  config.py  constants.py  display.py  formatters.py  history.py  i18n.py
bom_clima/locales/: en.json  es.json  pt.json
scripts/: package-arch.sh
tests/: __init__.py  test_bom_clima.py
